Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-3383

Wrong lfs quota output for inode quota over isoftlimit

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.4.1, Lustre 2.5.0
    • Lustre 2.1.5, Lustre 2.5.0
    • 3
    • 8376

      There is a small problem in lfs print_quota() function (lustre/utils/lfs.c:2487 in master) that can confuse output of lfs quota when user reaches isoftlimit and dqb_itime is set :

                      if (dqb->dqb_ihardlimit &&
                          dqb->dqb_curinodes >= dqb->dqb_ihardlimit) {
                              iover = 1;
                      } else if (dqb->dqb_isoftlimit && dqb->dqb_itime) {
                              if (dqb->dqb_btime > now) {
                                  ^^^^^^^^^^^^^^^^^^^^
                                      iover = 2;
                              } else {
                                      iover = 3;
                              }
                      }
      

      The test should be made on dbq_itime (inode time), not on dbq_dtime (data time).

      I will propose a patch to address this typo issue.

            niu Niu Yawei (Inactive)
            patrick.valentin Patrick Valentin (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: