lustre/utils/lfs.c
@@ -2484,11 +2484,11 @@ static void print_quota(char *mnt, struct if_quotactl *qctl, int type, int rc)
                     dqb->dqb_curinodes >= dqb->dqb_ihardlimit) {
                         iover = 1;
                 } else if (dqb->dqb_isoftlimit && dqb->dqb_itime) {
-                        if (dqb->dqb_btime > now) {
-                                iover = 2;
-                        } else {
-                                iover = 3;
-                        }
+			if (dqb->dqb_itime > now) {
+				iover = 2;
+			} else {
+				iover = 3;
+			}
                 }
 
 #if 0           /* XXX: always print quotas even when no usages */
